# modbus-relay

./: .gitignore  CMakeLists.txt  Cargo.toml  Cross.arch.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  config.cc  config.h  main.cc  modbus.cc  modbus.h  types.h  utils.cc  utils.h
.github/workflows/: ci.yml  release.yml
config/: config.example.yaml  default.yaml  development.yaml  production.yaml
src/: connection_manager.rs  errors.rs  http_api.rs  lib.rs  logging.rs  main.rs  modbus.rs  modbus_relay.rs  relay_config.rs  rtu_transport.rs  stats_manager.rs  utils.rs
src/config/: backoff.rs  connection.rs  http.rs  logging.rs  mod.rs  relay.rs  rtu.rs  stats.rs  tcp.rs
src/config/types/: data_bits.rs  mod.rs  parity.rs  rts_type.rs  stop_bits.rs
src/connection/: backoff_strategy.rs  events.rs  guard.rs  manager.rs  mod.rs
src/connection/stats/: client.rs  connection.rs  ip.rs  mod.rs
src/errors/: backoff.rs  config.rs  connection.rs  frame.rs  init.rs  io_operation.rs  mod.rs  relay.rs  rts.rs  transport.rs
src/errors/kinds/: client_error.rs  frame_error.rs  frame_format.rs  frame_size.rs  mod.rs  protocol_error.rs  serial_error.rs  system_error.rs
